# elir_simulation

./: README.md  exit
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/scripts/: auto_move.py  fibonacci_client.py  fibonacci_server.py  key_gazebo.py  turtle_cmd.py  two_pow_client.py  two_pow_server.py
elir_control/: CMakeLists.txt  package.xml
elir_control/config/: elir_controllers.yaml  elir_joint_control.yaml  mybot_control.yaml
elir_description/: CMakeLists.txt  package.xml  urdf.rviz
elir_description/launch/: elir_view.launch
elir_description/meshes/: LeptonBreakoutBoardWithLepton3.stl  PIR-M01-002-0_HolderWing.STL  PIR-M01-003-0_HolderWingWide.STL  Shaft_piro3.dae  Shaft_piro3.skp  Shaft_piro3_V2.skb  Shaft_piro3_V2_ml.dae  Shaft_piro3_V3.dae  base_link.dae  groundsonar.dae  link1.dae  shaft_simple.dae  shaft_simple_piro3.dae  shaft_simple_piro3_2.dae  wheel_elir.STL
elir_description/urdf/: car.xacro  collada_convert.sh  elir.gazebo  elir.gazebo.xacro  elir.urdf  elir.urdf.xacro  elir.xacro  macros.xacro  materials.xacro  tower.xacro  trash
elir_gazebo/: CMakeLists.txt  package.xml
elir_gazebo/meshes/: obs2.dae  (+1 more)
elir_line_control/: CMakeLists.txt  package.xml
elir_simulation_control/: CMakeLists.txt  package.xml
elir_v-2020/: CMakeLists.txt  package.xml
elir_v-2020/assembly2/: base.FCStd  base_estrutura.FCStd  base_fachamento.FCStd  base_gaveta.FCStd  base_haste_central.FCStd  base_tampa_lateral.FCStd  base_tampa_superior.FCStd  base_unidade_balanco.FCStd  base_viga.FCStd  braco_aleta1.FCStd  braco_aleta2.FCStd  braco_estrutura.FCStd  flir_lepton_placa.FCStd  garra_encaixe_inferior.FCStd  garra_encaixe_superior.FCStd  garra_estrutura.FCStd  gps.FCStd  hokuyo.FCStd  linha.FCStd  mx-106.FCStd  mx-106_frame.FCStd  mx-28.FCStd  mx-28_eixo.FCStd  mx-28_frame.FCStd  mx-28_frame_eixo.FCStd  mynt_eye.FCStd  roldana.FCStd  roldana_eixo.FCStd  roldana_externo.FCStd  roldana_interno.FCStd  roldana_pino.FCStd  sensores_suporte.FCStd  sensores_tampa_suporte.FCStd  sonar.FCStd  teledyne.FCStd  unidade_tracao_frontal.FCStd  unidade_tracao_traseira.FCStd
elir_v-2020/launch/: elir_sim.launch  elir_world.launch
elir_v-2020/meshes/: base.dae  base_fachamento.dae  base_unidade_balanco.dae  braco_aleta1.dae  braco_aleta2.dae  braco_estrutura.dae  flir_lepton_placa.dae  garra_encaixe_inferior.dae  garra_encaixe_superior.dae  garra_estrutura.dae  gps.dae  hokuyo.dae  linha.dae  mx-106.dae  mx-106_frame.dae  mx-28.dae  mx-28_eixo.dae  mx-28_frame.dae  mx-28_frame_eixo.dae  mynt_eye.dae  roldana.dae  sensores_suporte.dae  sensores_tampa_suporte.dae  sonar.dae  teledyne.dae  unidade_tracao_frontal.dae  unidade_tracao_traseira.dae
elir_v-2020/models/: elir_v-2020.sdf  elir_v-2020.urdf  elir_v-2020_actuators.urdf
install/: install.sh
moveit_with_gazebo/: .setup_assistant  CMakeLists.txt  README.md  package.xml
mybot_control/: CMakeLists.txt  package.xml
mybot_description/: CMakeLists.txt  package.xml  urdf.rviz
mybot_gazebo/: CMakeLists.txt  package.xml
piro_line_control/: CMakeLists.txt  package.xml
simulation_control/: CMakeLists.txt  package.xml
simulation_control_services/: CMakeLists.txt  README.md  package.xml
simulation_line_control/: CMakeLists.txt  package.xml
(+163 files in other folders)
